--- a/StockFeed/app/src/main/AndroidManifest.xml
+++ b/StockFeed/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <!-- THIS IS WHERE WE CHANGE THE ICON -->
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/sf_logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
@@ -15,7 +15,6 @@
            <!-- android:label="@string/app_name" -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
